# cdq-skills

./: .auto-cdq-state.json  .env.example  .gitignore  ALL_DELIVERABLES.md  ANALYSIS_MULTI_SECTION_HEADERS.md  AUTO-CDQ-OPTION3-SUMMARY.md  AUTORESEARCH_GEMINI_INVESTIGATION.md  AUTO_CDQ_HYBRID_PATTERN_COMPLETE.md  AUTO_CDQ_QUICK_START.md  AUTO_CDQ_README.md  AUTO_CDQ_WRAPPER_IMPLEMENTATION.md  BEFORE_AFTER_VISUAL.md  BULK_ONBOARDING_PLAN.md  BULK_ONBOARDING_RUNBOOK.md  CLAUDE.md  EXAMPLE_PROMPTS.md  FILE_MANIFEST.md  GEMINI_MIGRATION.md  GITHUB_PUSH_READY.txt  GITHUB_READINESS.md  GITHUB_READINESS_REPORT.md  GUIDE_IMPLEMENTING_MULTI_SECTION_HEADERS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ONBOARDING_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_IMPLEMENTATION.md  README.md  README_MULTI_SECTION_HEADERS.md  SETUP.md  START_HERE.md  SUMMARY_MULTI_SECTION_HEADERS.md  VISUAL_COMPARISON.txt  onboarding-manifest.json  pyproject.toml  requirements.txt
.gemini/: settings.json
cdq_skills/: __init__.py  auth.py  client.py
docs/: 00_START_HERE_INTERACTIVE_WORKFLOW.md  ALERTS_WORKFLOW_EXAMPLE.md  CDQ_SKILL_SEQUENCING_CHECKLIST.md  COMPLETION_SUMMARY.md  HYBRID_PROGRESSIVE_DISCLOSURE_PATTERN.md  IMPLEMENTING_NEW_WORKFLOWS.md  INDEX.md  INTERACTIVE_VS_NONINTERACTIVE.md  INTERACTIVE_WORKFLOW_REFERENCE.md  QUICK_REFERENCE_INTERACTIVE_PATTERN.md
lib/: auth.py  client.py
plans/: improve-mcp-client-skill.md  majestic-wandering-raven.md
scripts/: batch_onboard.sh  bulk_onboard_executor.py  bulk_onboard_loop.py  direct_onboard.py  fast_bulk_onboard.py  run_random_onboarding_workflow.sh  (+2 more)
(+61 files in other folders)
