[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cdq_skills"]

[project]
name = "cdq-skills"
version = "1.0.0"
description = "Collibra Data Quality API client and Claude Code skills"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "urllib3>=1.26.0",
]

[project.scripts]
cdq-test-connection = "cdq_skills.client:main"
cdq-run-sql = "cdq_skills.client:main"
cdq-list-tables = "cdq_skills.client:main"
cdq-get-rules = "cdq_skills.client:main"
cdq-save-rule = "cdq_skills.client:main"
cdq-delete-rule = "cdq_skills.client:main"
cdq-run-dq-job = "cdq_skills.client:main"
cdq-search-catalog = "cdq_skills.client:main"
cdq-get-jobs = "cdq_skills.client:main"
cdq-get-dataset = "cdq_skills.client:main"
cdq-get-results = "cdq_skills.client:main"
cdq-get-alerts = "cdq_skills.client:main"
cdq-save-alert = "cdq_skills.client:main"
cdq-get-recent-runs = "cdq_skills.client:main"
