[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cdq_skills"]

[project]
name = "cdq-skills"
version = "1.0.0"
description = "Collibra Data Quality API client and Claude Code skills"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "urllib3>=1.26.0",
    "pandas>=1.5.0",
    "tabulate>=0.9.0",
]

[project.scripts]
cdq = "cdq_skills.client:main"
